# meguri-pet

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.migration  README.md  alembic.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-dev.txt
adapters/: __init__.py
configs/: local_tts_contract.json  meguri_response.schema.json  meguri_sprite_runtime_map.json  meguri_system_prompt.txt  production_gate.json  text_baseline.json  tts_baseline.json  tts_eval_sentences.json  tts_full_ja.json  tts_full_ja_denoised.json  tts_full_ja_extended_denoised.json  tts_infer_v2pro_full_ja.yaml
docs/: airi-upstream-inventory.md  framework-bootstrap.md  llm-provider.md  memory-api.md  memory-embedding.md  memory-provider-decision.md  memory-recovery-runbook.md  memory-schema.md  memoryos-compatibility-evaluation.md  mvp-artifact-manifest.json  mvp-model-card.md  mvp-release-audit.md  mvp-smoke-response.json  production-readiness.md
migrations/: env.py
ops/: README.md  __init__.py
reports/: deliverables_verification.json  deliverables_verification.md  environment-baseline.md  environment-completion-audit.md  environment-final.md  environment-implementation-progress.md  environment_report.md  execution_plan.md  full_ja_deliverables_verification.json  full_ja_deliverables_verification.md  full_ja_release_decision.json  full_ja_training_report.md  memory-baseline.md  memory-completion-audit.md  memory-cross-client-test.md  memory-final-report.md  memory-performance.md  memory-progress.md  memory-recovery-validation.md  (+9 more)
(+353 files in other folders)
