[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "meguri-pet"
version = "0.1.0"
description = "Shared Meguri character runtime and local framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "asyncpg==0.31.0",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["adapters*", "services*", "training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
