[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "meguri-pet"
version = "0.1.0"
description = "Shared Meguri character runtime and local framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic==1.18.5",
  "asyncpg==0.31.0",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pgvector==0.5.0",
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
  "SQLAlchemy[asyncio]==2.0.51",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
embedding = [
  "sentence-transformers>=3,<6",
]
dev = [
  "aiosqlite>=0.21,<1",
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "pytest-asyncio>=1,<2",
]

[tool.setuptools.packages.find]
include = ["adapters*", "services*", "training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
